# cgp-examples

./: .gitignore  Cargo.toml  README.md
examples/01-04-concepts/: main.rs
examples/05-blanket-trait-impl/: main.rs
examples/06-impl-side-deps/: main.rs
examples/07-provider-traits/: main.rs
examples/08-linking-con-prov/: main-blanket-impl-delegate.rs  main.rs  string_formatter.rs
examples/09-provider-delegation/: aggregate_provider.rs  delgate_provider.rs  main.rs  shared.rs
examples/10-comp-macro/: main.rs
examples/10-modular-comp/: main.rs  person_component.rs  string_formatter_comp.rs  string_parser_comp.rs
examples/11-debugging/: dep_check.rs  dep_error.rs  main_check.rs  main_error.rs  string_parser_comp.rs
examples/11-debugging/debug_check/: main_check.rs
examples/11-debugging/debug_error/: main_error.rs  string_formatter_comp.rs
examples/12-associated-types/: app_mock_auth.rs  main.rs
examples/13-error-handling/: gen_error_mock_auth.rs  main.rs
