[package]
name = "cgp-examples"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
readme = "README.md"
repository = "https://github.com/marvin-hansen/cgp-examples"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]
license-file = "LICENSE"


[[example]]
name = "concepts"
path = "examples/01-04-concepts/main.rs"

[[example]]
name = "blanket-trait-impl"
path = "examples/05-blanket-trait-impl/main.rs"

[[example]]
name = "impl-side-deps"
path = "examples/06-impl-side-deps/main.rs"

[[example]]
name = "provider-traits"
path = "examples/07-provider-traits/main.rs"

[[example]]
name = "linking-consumer-provider"
path = "examples/08-linking-con-prov/main.rs"

[[example]]
name = "blanket-consumer-trait-implementation"
path = "examples/08-linking-con-prov/main-blanket-impl-delegate.rs"

[[example]]
name = "provider-delegation"
path = "examples/09-provider-delegation/main.rs"

[[example]]
name = "compiler-macro"
path = "examples/10-comp-macro/main.rs"

[[example]]
name = "modular-components"
path = "examples/10-modular-comp/main.rs"

[[example]]
name = "debug_error"
path = "examples/11-debugging/debug_error/main_error.rs"

[[example]]
name = "debug_check"
path = "examples/11-debugging/debug_check/main_check.rs"

[[example]]
name = "associated-types"
path = "examples/12-associated-types/main.rs"


# Optimize all crates
[profile.release]
opt-level = 3
strip = true  # Automatically strip debug symbols from the binary
lto = true    # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization

# There's a Cargo feature named profile-overrides
# that lets you override the optimization level of dependencies.
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
[profile.release.package."*"]
opt-level = 3
strip = 'debuginfo'  # Automatically strip debug infos from the binary to reduce size
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization


[dependencies]
anyhow = {version = "1"}
# https://github.com/contextgeneric/cgp
cgp = {version = "0.2"}
datetime = {version = "0.5"}
itertools = {version = "0.14" }
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}